# dotfiles

./: .env.example  .gitconfig  .gitignore  .gitignore_global  .zprofile  .zshrc  Brewfile  CLAUDE.md  README.md
templates/: AGENTS.md.template  CLAUDE.md.template  README.md  README.md.template  github-about.md  new-project-checklist.md
templates/python/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  WORKFLOW.md  bootstrap.sh  pyproject.toml  subdir-CLAUDE.md.example
templates/python/.claude/: settings.json
templates/python/.claude/agents/: reviewer-adversarial.md  reviewer.md
templates/python/.claude/agents/optional/: performance-reviewer.md  security-reviewer.md
templates/python/.claude/commands/: performance.md  security.md  spec.md  specs-status.md
templates/python/.claude/hooks/: block-destructive.sh  gate-on-stop.sh
templates/python/.claude/skills/dependency-hygiene/: SKILL.md
templates/python/.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
templates/python/.github/workflows/: ci.yml
templates/python/docs/: agent-handoff.md  serena-setup.md  workflow-diagram.md
templates/python/docs/specs/: README.md
